bug 53891 - strategy correctly calculates preferred width of a fixed width table. a=buster, r=dcone.